# tts-bot-discord

./: Main.py  keep_alive.py  pyproject.toml  requirements.txt  settings.ini
cogs/commands/: helpCommand.py  voiceCommands.py
