[tool.poetry]
name = "repl_python3_beta_tts-bot-discord-1"
version = "0.1.0"
description = ""
authors = ["xcloudx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
gTTS = "^2.2.4"
mutagen = "^1.45.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
